Adapt the #19571 backport to 34.0.0 APIs
The cherry-picks of #19395/#19571/#19596/#19615 assume upstream APIs that
post-date 34.0.0. Adaptations, each commented at the site:

- DimensionValueSetShardSpec: drop the withPartitionNum/withCorePartitions
  overrides. Those ShardSpec methods arrived with #19059 (Overlord MSQ minor
  compaction), which is not on this branch.

- IndexerSQLMetadataStorageCoordinator: preserve DimensionValueSetShardSpec on
  the REPLACE-over-published-append path too. Upstream gets this for free via
  oldSegment.getShardSpec().withPartitionNum(...) (also #19059); here it is an
  explicit special-case mirroring #19615's own getUpgradedSegmentShardSpec, so
  every other shard spec keeps the existing NumberedShardSpec behaviour.
  Without this, #19615's replace-path guarantee silently did not hold.

- Drop the "ingest/rows/published" metric from #19395 (and revert the
  IndexTaskUtils.getTotalRowCount helper added for it): it needs
  DataSegment#getTotalRows, which does not exist on this branch. The
  wasPublished() gating that #19571 actually depends on is kept.
  NOTE: "ingest/segments/count" is now emitted only when a task really
  published, so replicas no longer double-emit it.

- SeekableStreamIndexTaskRunnerTest: upstream's versions of the 11 new
  streamingPartitionsSpec tests are built on scaffolding
  (createTaskToolbox/TestSeekableStreamIndexTaskRunner) that post-dates
  34.0.0, and its copy of this file is 1114 lines vs 283 here. The same 11
  assertions are rewritten against this branch's existing
  TestasbleSeekableStreamIndexTaskRunner mocks.

- Drop EmbeddedDimensionValueSetShardSpecTest and KafkaTuningConfigBuilder:
  the embedded-cluster test depends on a newer harness (KafkaIOConfigBuilder,
  a newer tuning-config shape). Feature coverage is retained by the 11 unit
  tests above, DimensionValueSetShardSpecTest, StreamAppenderatorDriverTest,
  SegmentPublisherHelperTest and the two new IndexerSQLMetadataStorageCoordinator
  tes